fix logics in endps
