# internal/service/handlers/reset_password_initiate.go
@@ -28,6 +28,7 @@ func ResetPasswordInitiate(w http.ResponseWriter, r *http.Request) {
 	UserAgent := httpresp.GetUserAgent(r)
 
 	var user data.UsersSecret
+	var user2 data.UsersSecret
 
 	Server, err := cifractx.GetValue[*config.Service](r.Context(), config.SERVICE)
 	if err != nil {
@@ -39,18 +40,24 @@ func ResetPasswordInitiate(w http.ResponseWriter, r *http.Request) {
 
 	if username != nil {
 		user, err = Server.Queries.GetUserByUsername(r.Context(), *username)
-	} else {
-		user, err = Server.Queries.GetUserByEmail(r.Context(), *email)
+	}
+	if email != nil {
+		user2, err = Server.Queries.GetUserByEmail(r.Context(), *email)
 	}
 	if err != nil {
 		log.Errorf("Failed to get user: %v", err)
 		if errors.Is(err, sql.ErrNoRows) {
-			httpresp.RenderErr(w, problems.NotFound())
+			httpresp.RenderErr(w, problems.Unauthorized())
 			return
 		}
 		httpresp.RenderErr(w, problems.InternalError())
 		return
 	}
+	if user2.ID != user.ID {
+		httpresp.RenderErr(w, problems.BadRequest(errors.New("email and username do not match"))...)
+		return
+	}
+	
 	go func() {
 		err = Server.Mailman.SendList(user.Email, string(RESET_PASSWORD), "email_list.html", UserAgent, IP, 300)
 		if err != nil {
